Fixed key features alignment

--- a/public/styles/sass/_opi.scss
+++ b/public/styles/sass/_opi.scss
@@ -89,25 +89,23 @@
   }
   section#features {
     padding: 173px 0 336px 0;
+
     .measurement {
-      h4 {
-        margin-top: 55px;
-      }
+      margin-top: -73px;
       img {
         width: 100%;
-        margin: -73px auto 0 auto;
         display: flex;
       }
     }
     .intuition {
-      margin-top: 111px;
-      h4 {
-        margin-top: 177px;
-      }
+      margin-top: 71px;
       .img-wrap {
         display: flex;
         position: relative;
         width: 100%;
+        height: 584px;
+        flex-direction: column;
+        justify-content: center;
       }
       img {
         position: absolute;
@@ -126,14 +124,13 @@
       }
     }
     .tailor-made {
-      margin-top: 300px;
-      h4 {
-        margin-top: 177px;
-      }
+      margin-top: 320px;
       .img-wrap {
         display: flex;
         position: relative;
         width: 100%;
+        flex-direction: column;
+        justify-content: center;
       }
       img {
         position: absolute;
